<resources>
    <string name="app_name">First_android_game</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="playBtn">PLAY</string>
    <string name="levelBtn">LEVEL</string>
    <string name="selectLevel">Wybierz poziom</string>
    <string name="start">START</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>

    <string name="siema">tutaj bedzie game activity</string>


</resources>
